style: change timeline image object-fit to contain to prevent cropping

--- a/src/components/home/TimelineSection.module.css
+++ b/src/components/home/TimelineSection.module.css
@@ -116,7 +116,8 @@
 .imgPlaceholder img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  object-position: center;
 }
 
 .noImg {
